crates/quiver/tests/compile_fail/punted_type.stderr
error: `UnionArray` is explicitly not supported (yet)
 --> tests/compile_fail/punted_type.rs:7:12
  |
7 |     onion: UnionArray,
  |            ^^^^^^^^^^
